syntax = "proto3";

package common;

option go_package = "github.com/knighthell/knighthell-boilerplate-idl-proto/common";

import "google/protobuf/timestamp.proto";

message ResponseInfo {

  int32 totalCount = 1; // 총 개수
  int32 resultCount = 2; // 결과물의 개수
  optional int32 requestedPageNumber = 3; // 요청시 전달된 페이지 수
  optional int32 requestedLimitNumber = 5; // 요청시 전달된 결과물 제한 수
  optional string requestedCursorId = 4; // 요청시 전달된 커서 Id 값
}